--- a/src/pages/main-system/GraduateRecords.css
+++ b/src/pages/main-system/GraduateRecords.css
@@ -472,7 +472,7 @@ button.trash-btn {
   }
   
   .upload-preview span {
-    flex-shrink: 0; /* يمنع الاسم من الانضغاط */
+    flex-shrink: 0; 
   }
   
   .upload-preview button.save-upload {
